--- a/assets/templates/crypto-b/package.json
+++ b/assets/templates/crypto-b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "crypto-b",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11"
-  }
+  },
+  "dependencies": {},
+  "description": ""
 }
