--- a/assets/templates/crypto-b/package.json
+++ b/assets/templates/crypto-b/package.json
@@ -15,6 +15,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11"
   },
-  "dependencies": {},
+  "dependencies": {
+    "balanced-match": "^1.0.0"
+  },
   "description": ""
 }
