--- a/assets/templates/crypto-b/package.json
+++ b/assets/templates/crypto-b/package.json
@@ -13,6 +13,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-watch": "^4.3.11"
   },
   "dependencies": {
