--- a/assets/templates/sedona/package.json
+++ b/assets/templates/sedona/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sharing",
+  "author": "Max Sharing",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.4",
