--- a/assets/templates/xm/package.json
+++ b/assets/templates/xm/package.json
@@ -1,7 +1,6 @@
 {
   "name": "xm",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,13 @@
   "author": "Max Sharing",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
-  }
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^3.1.0"
+  },
+  "dependencies": {},
+  "description": ""
 }
