--- a/forexglobal/package.json
+++ b/forexglobal/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cssmin": "^0.2.0",
+    "gulp-jsmin": "^0.1.5",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
