--- a/xm/package.json
+++ b/xm/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cssmin": "^0.2.0",
+    "gulp-jsmin": "^0.1.5",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^3.1.0"
