--- a/aur/package.json
+++ b/aur/package.json
@@ -8,16 +8,17 @@
   },
   "author": "Max Sharing",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^3.9.1"
-  },
   "devDependencies": {
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cssmin": "^0.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-jsmin": "^0.1.5",
-    "gulp-livereload": "^3.8.1",
+    "gulp-livereload": "^4.0.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.3",
-    "gulp-sass": "^4.0.1"
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-svgmin": "^2.1.0"
   }
 }
