--- a/forexglobal/package.json
+++ b/forexglobal/package.json
@@ -13,6 +13,7 @@
     "gulp-jsmin": "^0.1.5",
     "gulp-livereload": "^4.0.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-svgmin": "^2.1.0"
