--- a/study-danit/package.json
+++ b/study-danit/package.json
@@ -19,5 +19,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "gulp-imagemin": "^6.0.0"
   }
 }
